[package]
name = "shot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdev = "0.5.3"
screenshots = "0.8.4"
image = "0.24.7"
tray-item = "0.8.0"
time = "0.3.29"
tokio = { version = "1.33.0", features = ["rt", "rt-multi-thread", "macros"] }
thirtyfour = "0.31.0"
color-eyre = "0.6.2"